--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,48 @@
 body {
   background-color: rgb(39, 40, 41);
 }
+
+.container {
+  max-width: 500px;
+  margin: auto;
+  margin-top: 300px;
+  padding: 30px;
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #f5f5f5;
+}
+
+input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1.2em;
+}
+
+button {
+  width: 100%;
+  padding: 10px;
+  background-color: #d60000;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+  font-size: 1.2em;
+}
+
+button:hover {
+  background-color: #b20000;
+}
+
+p {
+  margin-top: 15px;
+  padding: 15px;
+  background-color: #ffffff;
+  border-radius: 4px;
+  font-size: 1.2em;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
