--- a/src/App.css
+++ b/src/App.css
@@ -8,36 +8,26 @@ body {
   background-color: rgb(39, 40, 41);
 }
 
-.container {
-  max-width: 500px;
-  margin: auto;
-  margin-top: 300px;
-  padding: 30px;
-  border: 1px solid #e0e0e0;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: #f5f5f5;
-}
-
 input {
   width: 100%;
-  padding: 10px;
-  margin-bottom: 15px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  padding: 1em;
+  margin-bottom: 1em;
+  border: 0.15em solid #ccc;
+  border-radius: 0.25em;
   font-size: 1.2em;
 }
 
 button {
   width: 100%;
-  padding: 10px;
+  padding: 1em;
   background-color: #d60000;
   color: #fff;
   border: none;
-  border-radius: 4px;
+  border-radius: 0.25em;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
   font-size: 1.2em;
+  box-shadow: 0 0.25em 0.25em rgba(0, 0, 0, 0.1);
 }
 
 button:hover {
@@ -45,10 +35,20 @@ button:hover {
 }
 
 p {
-  margin-top: 15px;
-  padding: 15px;
+  margin-top: 1em;
+  padding: 1em;
   background-color: #ffffff;
-  border-radius: 4px;
+  border-radius: 0.25em;
   font-size: 1.2em;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1em 0.25em rgba(0, 0, 0, 0.1);
+}
+
+.container {
+  max-width: 35em;
+  margin: auto;
+  margin-top: 15em;
+  padding: 2em;
+  border: 0.3em solid #b20000;
+  border-radius: 0.5em;
+  background-color: #f5f5f5;
 }
