--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,8 @@ p {
 .container {
   max-width: 35em;
   margin: auto;
-  margin-top: 15em;
+  margin-top: 5em;
+  margin-bottom: 2em;
   padding: 2em;
   border: 0.3em solid #b20000;
   border-radius: 0.5em;
