--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,9 @@ p {
   border-radius: 0.5em;
   background-color: #f5f5f5;
 }
+
+.chatbot-information {
+  margin: auto;
+  text-align: center;
+  max-width: 70%;
+}
