--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ p {
 .container {
   max-width: 35em;
   margin: auto;
-  margin-top: 5em;
+  margin-top: 15em;
   margin-bottom: 2em;
   padding: 2em;
   border: 0.3em solid #b20000;
@@ -58,4 +58,9 @@ p {
   margin: auto;
   text-align: center;
   max-width: 70%;
+}
+
+.disclaimer {
+  margin: 0 auto;
+  max-width: 60%;
 }
