--- a/src/app/App.css
+++ b/src/app/App.css
@@ -46,7 +46,7 @@ p {
 .container {
   max-width: 35em;
   margin: auto;
-  margin-top: 5em;
+  margin-top: 1em;
   margin-bottom: 2em;
   padding: 2em;
   border: 0.3em solid #b20000;
@@ -64,4 +64,15 @@ p {
   margin: 0 auto;
   max-width: 29.2em;
   border: 0.3em solid #b20000;
+}
+
+.header {
+  color: #fff;
+  padding: 0.5em;
+  font-size: 1.9em;
+  margin-bottom: 2em;
+  border-radius: 0.25em;
+  box-shadow: 0 0.25em 0.25em rgba(0, 0, 0, 0.1);
+  max-width: 15%;
+  margin: 0 auto;
 }
