feat(app): add footer

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -8,6 +8,10 @@ body {
   background-color: rgb(39, 40, 41);
 }
 
+h4 {
+  color: #fff;
+  margin: 0.5em;
+}
 input {
   width: 100%;
   padding: 1em;
@@ -73,6 +77,6 @@ p {
   margin-bottom: 2em;
   border-radius: 0.25em;
   box-shadow: 0 0.25em 0.25em rgba(0, 0, 0, 0.1);
-  max-width: 15%;
   margin: 0 auto;
+  text-align: center;
 }
