--- a/src/app/App.css
+++ b/src/app/App.css
@@ -38,15 +38,6 @@ button:hover {
   background-color: #b20000;
 }
 
-p {
-  margin-top: 1em;
-  padding: 1em;
-  background-color: #ffffff;
-  border-radius: 0.25em;
-  font-size: 1.2em;
-  box-shadow: 0 1em 0.25em rgba(0, 0, 0, 0.1);
-}
-
 .container {
   max-width: 35em;
   margin: auto;
@@ -64,12 +55,6 @@ p {
   max-width: 70%;
 }
 
-.disclaimer {
-  margin: 0 auto;
-  max-width: 29.2em;
-  border: 0.3em solid #b20000;
-}
-
 .header {
   color: #fff;
   padding: 0.5em;
@@ -79,4 +64,19 @@ p {
   box-shadow: 0 0.25em 0.25em rgba(0, 0, 0, 0.1);
   margin: 0 auto;
   text-align: center;
+}
+
+.box {
+  margin-top: 1em;
+  padding: 1em;
+  background-color: #ffffff;
+  border-radius: 0.25em;
+  font-size: 1.2em;
+  box-shadow: 0 1em 0.25em rgba(0, 0, 0, 0.1);
+}
+
+.disclaimer {
+  margin: 0 auto;
+  max-width: 29.2em;
+  border: 0.3em solid #b20000;
 }
